--- a/src/app/times/detalhar/detalhar.page.html
+++ b/src/app/times/detalhar/detalhar.page.html
@@ -8,5 +8,49 @@
 </ion-header>
 
 <ion-content color="light">
-
+  <ion-item>
+    <ion-label>ID: {{time.id}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Nome: {{time.nome}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Gênero: {{time.genero}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Goleiro: {{time.goleiro}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Fixo: {{time.fixo}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Ala Direita: {{time.alaDireita}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Ala Esquerda: {{time.alaEsquerda}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Pivo: {{time.pivo}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Treinador: {{time.treinador}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Massagista: {{time.massagista}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Jogador Reserva 1: {{time.jogadorReserva1}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Jogador Reserva 2: {{time.jogadorReserva2}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Jogador Reserva 3: {{time.jogadorReserva3}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Jogador Reserva 4: {{time.jogadorReserva4}}</ion-label>
+  </ion-item>
+  <ion-item>
+    <ion-label>Jogador Reserva 5: {{time.jogadorReserva5}}</ion-label>
+  </ion-item>
 </ion-content>
