--- a/src/app/times/detalhar/detalhar.page.html
+++ b/src/app/times/detalhar/detalhar.page.html
@@ -14,43 +14,46 @@
   <ion-item>
     <ion-label>Nome: {{time.nome}}</ion-label>
   </ion-item>
-  <ion-item>
-    <ion-label>Gênero: {{time.genero}}</ion-label>
+  <ion-item *ngIf="time.genero == 'F'">
+      <ion-label>Gênero: Feminino</ion-label>
+    </ion-item>
+  <ion-item *ngIf="time.genero == 'M'">
+    <ion-label>Gênero: Masculino</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Goleiro: {{time.goleiro}}</ion-label>
+    <ion-label>Goleiro: {{goleiro.nome + ' ( ' + goleiro.cpf + ' / ' + goleiro.id +' )'}}</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Fixo: {{time.fixo}}</ion-label>
+    <ion-label>Fixo: {{fixo.nome + ' ( ' + fixo.cpf + ' / ' + fixo.id +' )'}}</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Ala Direita: {{time.alaDireita}}</ion-label>
+    <ion-label>Ala Direita: {{alaDireita.nome + ' ( ' + alaDireita.cpf + ' / ' + alaDireita.id +' )'}}</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Ala Esquerda: {{time.alaEsquerda}}</ion-label>
+    <ion-label>Ala Esquerda: {{alaEsquerda.nome + ' ( ' + alaEsquerda.cpf + ' / ' + alaEsquerda.id +' )'}}</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Pivo: {{time.pivo}}</ion-label>
+    <ion-label>Pivo: {{pivo.nome + ' ( ' + pivo.cpf + ' / ' + pivo.id +' )'}}</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Treinador: {{time.treinador}}</ion-label>
+    <ion-label>Treinador: {{treinador.nome + ' ( ' + treinador.cpf + ' / ' + treinador.id +' )'}}</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Massagista: {{time.massagista}}</ion-label>
+    <ion-label>Massagista: {{massagista.nome + ' ( ' + massagista.cpf + ' / ' + massagista.id +' )'}}</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Jogador Reserva 1: {{time.jogadorReserva1}}</ion-label>
+    <ion-label>Jogador Reserva 1: {{jogadorReserva1.nome + ' ( ' + jogadorReserva1.cpf + ' / ' + jogadorReserva1.id +' )'}}</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Jogador Reserva 2: {{time.jogadorReserva2}}</ion-label>
+    <ion-label>Jogador Reserva 2: {{jogadorReserva2.nome + ' ( ' + jogadorReserva2.cpf + ' / ' + jogadorReserva2.id +' )'}}</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Jogador Reserva 3: {{time.jogadorReserva3}}</ion-label>
+    <ion-label>Jogador Reserva 3: {{jogadorReserva3.nome + ' ( ' + jogadorReserva3.cpf + ' / ' + jogadorReserva3.id +' )'}}</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Jogador Reserva 4: {{time.jogadorReserva4}}</ion-label>
+    <ion-label>Jogador Reserva 4: {{jogadorReserva4.nome + ' ( ' + jogadorReserva4.cpf + ' / ' + jogadorReserva4.id +' )'}}</ion-label>
   </ion-item>
   <ion-item>
-    <ion-label>Jogador Reserva 5: {{time.jogadorReserva5}}</ion-label>
+    <ion-label>Jogador Reserva 5: {{jogadorReserva5.nome + ' ( ' + jogadorReserva5.cpf + ' / ' + jogadorReserva5.id +' )'}}</ion-label>
   </ion-item>
 </ion-content>
