--- a/src/app/jogos/alterar/alterar.page.html
+++ b/src/app/jogos/alterar/alterar.page.html
@@ -132,10 +132,7 @@
 
 </ion-content>
 <ion-toolbar>
-  <ion-button (click)="alterarJogo()" type="submit" expand="full"  fill="outline"
+  <ion-button (click)="alterarJogo()" type="submit" expand="full" [disabled]="!formJogo.valid" fill="outline"
     shape="round">Alterar
   </ion-button>
-
-  <ion-item>{{formJogo.value | json}}</ion-item>  
-
-
+</ion-toolbar>
