--- a/src/app/jogos/jogos.page.html
+++ b/src/app/jogos/jogos.page.html
@@ -76,7 +76,7 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-      <ion-button  (click)="detalharJogo(jogo.id)" (click)="refreshPage()" slot="end" shape="round" fill="outline">Sumulas</ion-button>
+      <ion-button  (click)="sumulaJogo(jogo.id)" slot="end" shape="round" fill="outline">Sumulas</ion-button>
       <ion-button  (click)="detalharJogo(jogo.id)" (click)="refreshPage()" slot="end" shape="round" fill="outline">Detalhar</ion-button>
       <ion-button (click)="alterarJogo(jogo.id)"slot="end" shape="round" fill="outline" color="warning">Alterar</ion-button>
       <ion-button (click)="excluirJogo(jogo.id, jogo.timeA, jogo.timeB)" slot="end" shape="round" fill="outline" color="danger">Deletar</ion-button>
